@@ -8,7 +8,16 @@ table.task_sets_table tbody td:first-child { border-right: 1px dashed gray; }
 table.task_sets_table tbody td:nth-child(2) { padding-left: 5px; }
 table.task_sets_table tbody tr:nth-child(even) { background-color: rgba(255,255,255,128); }
 table.task_sets_table tbody tr.opened_task_set { background-color: rgba(128,128,255,192); border: 1px solid blue; }
+table.task_sets_table tbody tr.not_published_task_set { background-color: rgba(192, 0, 0, 255); }
+table.task_sets_table tbody tr:nth-child(even).not_published_task_set { background-color: rgba(212, 0, 0, 255); }
+table.task_sets_table tbody tr.opened_task_set.not_published_task_set { background-color: rgba(192, 128, 192, 255); }
+table.task_sets_table tbody tr:nth-child(even).opened_task_set.not_published_task_set { background-color: rgba(212, 128, 212, 255); }
 table.task_sets_table tbody td ul { margin-left: 20px; }
+table.task_sets_table tbody tr td span.published_yes { color: green; font-weight: bold; }
+table.task_sets_table tbody tr td span.published_no { color: black; font-weight: bold; }
+table.task_sets_table tbody tr.opened_task_set td span.published_yes { color: lightgreen; font-weight: bold; }
+table.task_sets_table tbody tr.opened_task_set td span.published_no { color: orange; font-weight: bold; }
+table.task_sets_table tbody tr td a.change_publication_status { font-weight: bold; color: green; text-decoration: none; }
 table.task_sets_table tfoot td { text-align: right; background-color: rgba(192,192,192,128); padding: 2px; border-radius: 4px; }
 table.task_sets_table thead tr th { padding: 2px; background-color: rgba(192,192,192,128); }
 table.task_sets_table thead tr th:first-child { border-top-left-radius: 4px; border-bottom-left-radius: 4px; }
