@@ -25,6 +25,12 @@ VERSION 1.3.0 | 2016-02-06
 NEW V kurzoch je možné nastaviť automatické akceptovanie nových účastníkov.
 NEW [lang:english] In courses there is new option to automatically accept all students wanting to attend it.
 
+NEW Stav publikovania zostavy úloh je teraz možné zmeniť priamo zo zoznamu zostáv úloh. (Tlačidlá [+] a [-])
+NEW [lang:english] Publication status of task set can be changed directly from table of task sets now. (Buttons [+] and [-])
+
+CHANGE V tabuľke zostáv úloh sa riadky označia červenou farbou, ak zostava nie je publikovaná.
+CHANGE [lang:english] In table of task sets lines will be marked with red color if particular task set is not published.
+
 END VERSION
 
 VERSION 1.2.4 | 2016-01-07
